--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -20,7 +20,7 @@
         <div id="linkstitle">
           <h3>Want more ?</h3>
         </div>
-        <a class='btn btn-primary' id='btn-show' href='#'>Cities analytics</a>
+        <%= link_to 'Cities analytics', query_cities_path(@query), class: 'btn btn-primary', id:'btn-show' %>
         <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary', id:'btn-show' %>
       </div> 
     </div>
