--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -20,8 +20,8 @@
   >
   <div class="rccontent">
     <div class="rctitle">
-      <%= image_tag("five-stars.png", height: '12') %>
       <h3><%= @query.address %></h3>
+      <%= image_tag("five-stars.png", height: '12') %>
       <div id="icon<%= @query.id %>">
         <i class="fa fa-eye" aria-hidden="true" data-id="<%= @query.id %>"></i>
         <i class="fa fa-eye-slash infohide" aria-hidden="true" data-id="<%= @query.id %>"></i>
@@ -33,15 +33,15 @@
     <div class="rcresults">
       <div class="rcpop">
         <h3>Population</h3>
-        <p> <i class="fa fa-users" aria-hidden="true"></i> Population : <%= @query.analytics[:population] %> </p>
-        <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Density : <%= @query.analytics[:population].fdiv(@query.radius_catchment_area*@query.radius_catchment_area*0.0314).round(2) %> /10m2</p>
-        <p> <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+        <p style="margin-left: 8px;"> <i class="fa fa-users" aria-hidden="true"></i> Population : <%= @query.analytics[:population] %> </p>
+        <p style="margin-left: 8px;"> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Density : <%= @query.analytics[:population].fdiv(@query.radius_catchment_area*@query.radius_catchment_area*0.0314).round(2) %> /10m2</p>
+        <p style="margin-left: 8px;"> <i class="fa fa-birthday-cake" aria-hidden="true"></i>
  Middle age : <%= (@query.analytics[:res25]*12.5 + @query.analytics[:res2565]*45 + @query.analytics[:res65]*72).fdiv(100).round(1) %> years old</p>
       </div>
       <div class="rccomp">
         <h3>Competitors</h3>
-        <p> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : <%= @query.competitors_catchment %></p>
-        <p> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor :
+        <p style="margin-left: 8px;"> <i class="fa fa-briefcase" aria-hidden="true"></i> Competitors : <%= @query.competitors_catchment %></p>
+        <p style="margin-left: 8px;"> <i class="fa fa-star" aria-hidden="true"></i> Population / competitor :
           <% if @query.competitors_catchment != 0  %>
           <%= @query.analytics[:population].fdiv(@query.competitors_catchment).round %>
           <% end %>
