--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,13 +3,21 @@
   border-color: $blue !important;
 }
 #btn-show {
-    width: 100%;
-    margin-bottom: 15px;
+  width: 100%;
+  margin-bottom: 15px;
+  background: transparent !important;
+  border: 1px solid $blue;
+  color: $blue;
+  border-radius: 5px;
 }
 
 #btn-show:hover {
-      opacity: 0.7;
+  border: 1px solid $blue;
+  color: white;
+  background: $blue !important;
+  border-radius: 5px;
 }
+
 
 #btn-sign-up {
   width: 240px;
