--- a/app/assets/stylesheets/components/_result-card.scss
+++ b/app/assets/stylesheets/components/_result-card.scss
@@ -12,7 +12,7 @@
 
 .rccontent {
   position: absolute;
-  padding: 10px;
+  padding: 20px;
   line-height: 90%;
   width: 100%;
   height: 100%;
@@ -29,13 +29,16 @@
   border-bottom: 1px solid #EEE;
   h3 {
     margin-top: 10px;
+    margin-bottom: 5px;
+    color: $blue;
+    font-weight: 600;
   }
 }
 
 #rclinks {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 20px;
+  right: 20px;
   color: #FAFAFA;
   // border-top: 1px solid rgba(0,0,0,0.3);
   a {
