--- a/app/assets/stylesheets/components/_show_card.scss
+++ b/app/assets/stylesheets/components/_show_card.scss
@@ -43,6 +43,7 @@
 #sctitle {
   border-bottom: 1px solid #EEE;
   margin: 10px 0;
+  position: relative;
 }
 
 #insee {
@@ -56,7 +57,7 @@
 
 #linktopdf {
   position: absolute;
-  bottom: 20px;
+  bottom: 10px;
   right: 20px;
   // border-top: 1px solid rgba(0,0,0,0.3);
   a {
@@ -65,7 +66,12 @@
     color: $blue;
     font-size: 1.8rem;
     font-weight: 500;
-    padding: 3px 0;
+  }
+}
 
+#linktopdf:hover {
+  a {
+    font-size: 2.3rem;
+    font-weight: 600;
   }
 }
