--- a/app/assets/stylesheets/components/_show_search.scss
+++ b/app/assets/stylesheets/components/_show_search.scss
@@ -1,5 +1,6 @@
 #ssframe {
   background: $backcards;
+  position: relative;
   margin: 10px;
   display: flex;
   align-items: center;
@@ -25,4 +26,7 @@
   font-weight: 500;
   text-decoration: none;
   color: $blue;
+position: absolute;
+bottom: 10px;
+right: 10px;
 }
