--- a/app/views/shared/_show_search.html.erb
+++ b/app/views/shared/_show_search.html.erb
@@ -5,7 +5,7 @@
     </div>
     <p style="margin-top: 20px";> <i class="fa fa-users" aria-hidden="true"></i> Activity : <strong><%= @query.activity %></strong> </p>
     <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Radius search : <strong><%= @query.radius_search %> m</strong>  </p>
-    <p> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Catchment area : <strong><%= @query.radius_catchment_area %>m</strong></p>
+    <p style="margin-bottom:40px;"> <i class="fa fa-user-circle-o" aria-hidden="true"></i> Catchment area : <strong><%= @query.radius_catchment_area %>m</strong></p>
     <div class="backtohome">
       <%= link_to 'Back to searches', @queries_path %>
     </div>
