--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,6 +37,12 @@
   }
 }
 
+#homesignin {
+  margin-top: 10px;
+  color: $backcards;
+  font-weight: 300;
+}
+
 #homepage-expl {
   display: flex;
   flex-direction: column;
