--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -22,8 +22,12 @@
   width: 250px;
 }
 
+.btn {
+  background: $blue;
+}
+
 #btn-form-homepage {
-  background: $blue;
+  background: $blue !important;
   width: 100%;
 }
 
