--- a/app/assets/stylesheets/pages/_queriesindex.scss
+++ b/app/assets/stylesheets/pages/_queriesindex.scss
@@ -8,20 +8,29 @@
 
 .map-controls {
   position: absolute;
+  padding: 5px 10px;
   top: 10px;
   left: 112px;
   background: white;
-  border-radius: 3px;
+  border-radius: 5px;
   z-index: 20;
 
   label {
-    font-size: 17px;
-  }
-
-  input {
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: #555;
+      input {
     opacity: 1 !important;
     position: relative !important;
+    margin-left: 5px;
+    margin-right: 10px;
+    width: 1.1em; height: 1.1em;
   }
+}
+}
+
+#setting-open, #infos-open {
+  color: black;
 }
 
 .indexcards {
