--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,40 @@
+<div id="homepage-top">
+  <h1>Sign up</h1>
+  <%= image_tag('logoblack.png', style: 'height:95px;width:auto;') %>
+</div>
+
+<div id="homepage-middle" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://cdn.vox-cdn.com/thumbor/3job2Q0siUze1rXAHq4aXEYdX0M=/339x0:1238x599/1200x800/filters:focal(339x0:1238x599)/cdn.vox-cdn.com/uploads/chorus_image/image/45205974/uber_SafeCities_BlogHeader.0.0.png');">
+
+      <div class="col-xs-12 col-sm-6" style="height: 80vh;">
+        <div id="homepage-form">
+          <div id="home-form">
+            <div id="container-form">
+              <div id="getstarted">
+                <h3>Sign up</h3>
+                  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+
+    <div class="form-inputs">
+      <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, required: true %>
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up", id: 'btn-form-homepage' %>
+    </div>
+      <%= render "devise/shared/links" %>
+
+  <% end %>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="container">
   <h2>Sign up</h2>
 
@@ -14,6 +51,4 @@
       <%= f.button :submit, "Sign up" %>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
