--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,12 @@
 
 @import "bootstrap";
 
+.form-content {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+  background-color: white;
+}
 
 body {
   background: $lightblue;
