--- a/app/assets/stylesheets/components/_mapindex.scss
+++ b/app/assets/stylesheets/components/_mapindex.scss
@@ -19,8 +19,8 @@
   box-shadow: 1px 1px 2px black;
   background-color: white;
   position: absolute;
-  right: 5px;
-  top: 50px;
+  right: 3px;
+  top: 3px;
   z-index:20;
   width: 250px;
   font-size: 10px;
@@ -30,36 +30,6 @@
     margin: 0;
     padding-bottom: 10px;
   }
-}
-
-
-#setting-open {
-  cursor: pointer;
-}
-
-#show-setting {
-  border-radius: 5px;
-  box-shadow: 1px 1px 2px black;
-  background-color: white;
-  position: absolute;
-  right: 5px;
-  top: 50px;
-  z-index:20;
-  width: 180px;
-  height: 180px;
-  font-size: 10px;
-  padding: 15px;
-  h3 {
-    font-size: 2rem;
-    margin: 0;
-    padding-bottom: 10px;
-  }
-#setting-close {
-    font-size: 18px;
-    float: right;
-    cursor: pointer;
-  }
-
 }
 
 .rangeslider,
@@ -75,6 +45,23 @@
   background-color: hotpink;
 }
 
-#slidecontainer span {
-  display: none;
+
+.map-controls {
+  position: absolute;
+  padding: 5px 10px;
+  top: 10px;
+  left: 130px;
+  background: white;
+  border-radius: 5px;
+  z-index: 20;
+  width: calc(100% - 180px);
+
+  span {
+    display:none;
+  }
+  input {
+    margin: 0px;
+    padding:0px;
+    padding-top: 5px;
+  }
 }
