--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -41,7 +41,7 @@
 }
 
 .control-label {
-  font-size: 12px;
+  font-size: 1rem;
 }
 
 .input-field {
@@ -73,4 +73,16 @@ input:focus {
 form abbr {
   text-decoration: none;
   border-bottom: 0 !important;
+}
+
+.caret {
+text-decoration: none;    
+}
+
+.select-wrapper input.select-dropdown {
+  font-size: 1.8rem;
+}
+
+.select.required {
+  font-size: 1.2rem;
 }
