--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -68,7 +68,7 @@
   width: 250px;
   height: 400px;
   background: #FAFAFA;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 4px 0 rgba(165, 165, 165, 0.1);
   transition: 0.3s;
   border-radius: 2px;
   text-align: center !important;
@@ -93,10 +93,4 @@
   background: white;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
   transition: all .7s linear;
-}
-
-.exp-photo:hover {
-  width: 215px;
-  height: 215px;
-  transition: all .2s ease;
 }
