--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -64,11 +64,11 @@
           <i id="setting-open" class="fa fa-cogs fa-fw fa-lg"></i>
         </div> -->
 
-          <div id="infos-button"  onclick="openinf()">
+          <div id="infos-button" >
             <i id="infos-open" class="fa fa-info-circle fa-fw fa-lg"></i>
           </div>
           <div id="show-content" class="infohide">
-            <p style="text-align:right; margin:0" ><i id="infos-close" onclick="closeinf()" class="fa fa-close"></i></p>
+            <p style="text-align:right; margin:0" ><i id="infos-close" class="fa fa-close"></i></p>
             <h3>Informations : </h3>
             <div id="infos-current">
               <p><b>Population : </b> <span id="pop">--</span> habitants</p>
