--- a/app/views/shared/_result_card.html.erb
+++ b/app/views/shared/_result_card.html.erb
@@ -11,6 +11,7 @@
 <div class="rcframe"
   data-id="query<%= @query.id %>"
   data-title ="<%= @query.address %>"
+  data-activity ="<%= @query.activity %>"
   data-lat ="<%= @query.latitude %>"
   data-lng ="<%= @query.longitude %>"
   data-radiussearch ="<%= @query.radius_search %>"
