--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -29,14 +29,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">New search</h4>
+                <h4 class="modal-title" id="myModalLabel">New search address or right click on the map</h4>
               </div>
               <div class="modal-body">
                 <%= render 'form' %>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Search</button>
               </div>
             </div>
           </div>
@@ -53,7 +49,7 @@
           </div>
           <div style="width: 30%;">
               <div class="captionbarcomp innercaption">Competitors</div>
-              <input type="range" min="0" max="100" id="sliderh" value="40">
+              <input type="range" min="0" max="100" id="sliderh" value="30">
           </div>
           <div style="width: 30%;">
               <div class="captionbardeal innercaption">Good deal</div>
