--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -86,3 +86,7 @@ text-decoration: none;
 .select.required {
   font-size: 1.2rem;
 }
+
+.dropdown-content li > a, .dropdown-content li > span {
+  color: $blue;
+}
