--- a/app/assets/stylesheets/components/_mapindex.scss
+++ b/app/assets/stylesheets/components/_mapindex.scss
@@ -51,8 +51,8 @@
   padding: 5px 10px;
   top: 10px;
   left: 130px;
-  background: white;
-  border-radius: 5px;
+  background: #F4F4F4;
+  border-radius: 3px;
   z-index: 20;
   width: calc(100% - 180px);
 
@@ -62,7 +62,7 @@
   input {
     margin: 0px;
     padding:0px;
-    padding-top: 5px;
+    padding: 10px 0 8px 0;
   }
 }
 
