--- a/app/views/queries/index.html.erb
+++ b/app/views/queries/index.html.erb
@@ -29,7 +29,7 @@
       <div class="myflex map-controls">
           <div style="width: 30%;">
               <div class="captionbarpop innercaption">Population</div>
-              <input type="range" min="0" max="100" id="sliderp" value="35">
+              <input style="color: black;" type="range" min="0" max="100" id="sliderp" value="35">
           </div>
           <div style="width: 30%;">
               <div class="captionbarcomp innercaption">Competitors</div>
