--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/navbar' %>
-<div class="container">
+<div class="container" style="background:#FDFDFD; line-height:200%; margin-top:30px;">
   <div>
     <h1>Nearest Cities</h1>
     <p>Choose the most suitable city considering your needs</p>
@@ -8,14 +8,14 @@
   <div>
     <table class=".table table-sm table-hover">
       <thead>
-        <th>#</th>
+        <th></th>
         <th>Name</th>
-        <th>Distance from search</th>
-        <th>population</th>
-        <th>density</th>
-        <th>sex (Men / Women)</th>
-        <th>age - (-25 / 25-64 / +65)</th>
-        <th>Unemployment rate</th>
+        <th>Distance</th>
+        <th>Population</th>
+        <th>Density</th>
+        <th>Men /</br>Women</th>
+        <th>Age</br>(-25 / 25-64 / +65)</th>
+        <th>Unemployment</th>
         <th>Revenues</th>
       </thead>
     <% x = 0 %>
