--- a/app/views/competitors/index.html.erb
+++ b/app/views/competitors/index.html.erb
@@ -1,8 +1,8 @@
 <%= render 'shared/navbar' %>
-<div class="container">
+<div class="container" style="background:#FDFDFD; line-height:200%; margin-top:30px;">
   <div>
     <h1>Worst Competitors</h1>
-    <p>Find the worst competitors, get your phone and buy a shop!</p>
+    <p>Here are your worst competitors. Get your phone and buy a shop !</p>
   </div>
 
   <div>
