--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -5,8 +5,7 @@
       <%= render 'shared/show_search' %>
     </div>
 
-    <div id="showmapframe">
-        <%= static_map_for(@query, class: '') %>
+    <div id="showmapframe" style="background-image: url('<%= static_map_for(@query) %>'); background-size: cover;">
     </div>
   </div>
   <div id="showcard">
@@ -22,11 +21,7 @@
         <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary', id:'btn-show' %>
       </div> 
     </div>
-    <div id="showstreetframe">
-        <%= street_view(@query, class: '') %>
+    <div id="showstreetframe" style="background-image: url('<%= street_view(@query) %>'); background-size: cover;">
     </div>
   </div>
 </div>
-
-
-
