return button and density

--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -3,6 +3,7 @@
   <div>
     <h1>Nearest Cities</h1>
     <p>Choose the most suitable city considering your needs</p>
+    <p><%= link_to 'back', :back %></p>
   </div>
 
   <div>
