--- a/app/views/competitors/index.html.erb
+++ b/app/views/competitors/index.html.erb
@@ -3,6 +3,7 @@
   <div>
     <h1>Worst Competitors</h1>
     <p>Here are your worst competitors. Get your phone and buy a shop !</p>
+    <p><%= link_to 'back', :back %></p>
   </div>
 
   <div>
