--- a/app/views/queries/show.html.erb
+++ b/app/views/queries/show.html.erb
@@ -17,9 +17,9 @@
         <div id="linkstitle">
           <h3>Want more ?</h3>
         </div>
-        <%= link_to 'Cities analytics', query_cities_path(@query), class: 'btn btn-primary', id:'btn-show' %>
-        <%= link_to 'View competition', query_competitors_path(@query), class: 'btn btn-primary', id:'btn-show' %>
-      </div> 
+        <%= link_to 'Cities analytics', query_cities_path(@query), target: :_blank, class: 'btn btn-primary', id:'btn-show' %>
+        <%= link_to 'View competition', query_competitors_path(@query), target: :_blank, class: 'btn btn-primary', id:'btn-show' %>
+      </div>
     </div>
     <div id="showstreetframe" style="background-image: url('<%= street_view(@query) %>'); background-size: cover;">
     </div>
