--- a/app/assets/stylesheets/pages/_pdf.scss
+++ b/app/assets/stylesheets/pages/_pdf.scss
@@ -13,7 +13,7 @@
   #showcontentpdf {
   display: flex;
   justify-content: space-between;
-  margin: auto 20px;
+  margin: auto;
   background: white;
   page-break-inside: avoid;
   }
