--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'shared/flashes' %>
     <%= yield %>
     <%= javascript_include_tag "https://maps.google.com/maps/api/js?libraries=visualization,places&key=#{ENV['GOOGLE_API_BROWSER_KEY']} " %>
     <%= javascript_include_tag "https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/markerclusterer/src/markerclusterer_compiled.js" %>
